--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,8 +1,10 @@
 .header-menu {
   height: 90px;
   font-family: "Open Sans";
-  .navbar-brand img {
-    width: 340px;
+  .navbar-brand {
+    img {
+      width: 340px;
+    }
   }
   .menu ul li {
     padding: 0 20px;
