Sửa các lỗi từ comment - pull request

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,45 +1,57 @@
 .header-menu {
   height: 90px;
-  font-family: "Open Sans";
+  font-family: $open_sans;
+
   .navbar-brand {
+    width: 340px;
+
     img {
-      width: 340px;
+      width: 100%;
     }
   }
+
   .menu ul li {
     padding: 0 20px;
     text-transform: uppercase;
+  }
 
-    a {
-      font-size: 14px;
-      color: #505353;
-      font-weight: bold;
-    }
+  .menu ul li a {
+    font-size: 14px;
+    color: $text_navbar_color;
+    font-weight: bold;
+  }
 
-    &:hover {
-      background: #B2D235;
-      border-radius: 17px;
+  .menu ul li:hover {
+    background: $color_hover;
+    border-radius: 17px;
+    color: white;
+  }
 
-      a {
-        color: white;
-      }
-    }
+  .menu ul li a:hover {
+    color: white;
   }
 }
+
 @media all and (min-width: 768px) and (max-width: 1024px){
   .header-menu {
     display: block;
     height: 188px;
+
     .navbar-brand {
+      width: 300px;
       display: flex;
       justify-content: center;
       align-items: center;
+      margin: 0 auto;
+
       img {
-        width: 300px;
+        width: 100%;
       }
     }
+
     .menu {
       display: block;
+
       .navbar-nav {
         margin: 0 auto;
       }
@@ -48,26 +60,33 @@
 }
 @media all and (max-width: 767px){
   .header-menu {
+    height: 65px;
+
     .navbar-toggler .navbar-toggler-icon {
       width: 20px;
       height: 20px;
     }
+
     .navbar-brand {
+      width: 150px;
       margin: 0 auto;
-      img{
-        width: 150px;
+      img {
+        width: 100%;
       }
     }
+
     .menu ul li {
       font-weight: bold;
       font-size: 16px;
       line-height: 22px;
       text-transform: uppercase;
+
       &:hover {
         background: none;
         border-radius: 0;
+
         a {
-          color: #B2D235;
+          color: $color_hover;
         }
       }
     }
