--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -3,3 +3,9 @@ $text_navbar_color: #505353;
 $color_hover: #B2D235;
 $open_sans: "Open Sans";
 $utm_bryantlg: "UTM BryantLG";
+@font-face {
+  font-family: $utm_bryantlg;
+  src: url("../assets/fonts/utm_bryantlg.ttf");
+  font-size: 14px;
+}
+
