--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -14,6 +14,7 @@ $bg-rails: #E14E40;
 $bg-java1: #1B75BB;
 $color_other_courses: #11114E;
 $color-view-all: #90AB26;
+$cl-while: #FFFFFF;
 
 @font-face {
   src: url("../assets/fonts/utm_bryantlg.ttf");
