Fix errors from comments - pull request 3

--- a/scss/_courses.scss
+++ b/scss/_courses.scss
@@ -68,7 +68,7 @@
       font-size: 18px;
       color: $cl-while;
       background: $color_hover;
-      box-shadow: inset 0px 1.5px 2px #6F8710;
+      box-shadow: inset 0px 1.5px 2px $cl-box-shadow;
       border-radius: 22px;
       border: 0.3px solid $cl-while;
     }
