--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -15,6 +15,7 @@ $bg-java1: #1B75BB;
 $color_other_courses: #11114E;
 $color-view-all: #90AB26;
 $cl-while: #FFFFFF;
+$cl-box-shadow: #6F8710;
 
 @font-face {
   src: url("../assets/fonts/utm_bryantlg.ttf");
