--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -16,6 +16,11 @@ $color_other_courses: #11114E;
 $color-view-all: #90AB26;
 $cl-while: #FFFFFF;
 $cl-box-shadow: #6F8710;
+$cl-border: #E2E2E2;
+$cl-border-l: #D9DADC;
+$cl-black: #000000;
+$cl-feedback-icon: #F2C54F;
+$cl-feedback-slide: #C4C4C4;
 
 @font-face {
   src: url("../assets/fonts/utm_bryantlg.ttf");
