--- a/scss/_why-hapolearn.scss
+++ b/scss/_why-hapolearn.scss
@@ -11,7 +11,7 @@
     color: $cl-while;
     text-align: center;
 
-    h3 {
+    .why-hapolearn-title {
       font-weight: bold;
       font-size: 70px;
       line-height: 86px;
@@ -29,7 +29,7 @@
     }
   }
 
-  i {
+  .fa-check-circle {
     font-size: 26px;
     font-weight: 400;
     line-height: 34px;
@@ -57,7 +57,7 @@
     height: 395px;
 
     &-text {
-      h3 {
+      .why-hapolearn-title {
         width: 700px;
         font-size: 50px;
         line-height: 61px;
@@ -73,7 +73,7 @@
       }
     }
 
-    i {
+    .fa-check-circle {
       font-size: 17px;
       line-height: 20px;
       letter-spacing: 5px;
@@ -106,7 +106,7 @@
     height: 550px;
 
     &-text {
-      h3 {
+      .why-hapolearn-title {
         text-align: left;
         width: 300px;
         font-size: 40px;
@@ -123,7 +123,7 @@
       }
     }
 
-    i {
+    .fa-check-circle {
       font-size: 16px;
       line-height: 18px;
       letter-spacing: -0.02em;
