--- a/scss/_banner-end.scss
+++ b/scss/_banner-end.scss
@@ -22,7 +22,7 @@
     letter-spacing: -0.05em;
     color: $color-view-all;
     background: $cl-while;
-    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px 0px $cl-boxshadow-black inset;
     border-radius: 35px;
     padding: 15px 65px;
   }
