--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -21,6 +21,7 @@ $cl-border-l: #D9DADC;
 $cl-black: #000000;
 $cl-feedback-icon: #F2C54F;
 $cl-feedback-slide: #C4C4C4;
+$cl-boxshadow-black: #00000040;
 
 @font-face {
   src: url("../assets/fonts/utm_bryantlg.ttf");
