--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -22,6 +22,7 @@ $cl-black: #000000;
 $cl-feedback-icon: #F2C54F;
 $cl-feedback-slide: #C4C4C4;
 $cl-boxshadow-black: #00000040;
+$cl-copyright: #454545;
 
 @font-face {
   src: url("../assets/fonts/utm_bryantlg.ttf");
