Fix error use variable

--- a/scss/_login-register.scss
+++ b/scss/_login-register.scss
@@ -66,7 +66,7 @@
     .form-control {
       height: 60px;
       margin-bottom: 30px;
-      background-color: #F2F2F2;
+      background-color: $cl-bg-lr-fc;
     }
 
     .ipt-pwd {
