--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -25,6 +25,7 @@ $cl-boxshadow-black: #00000040;
 $cl-copyright: #454545;
 $cl-bg-google: #DC4E41;
 $cl-bg-fb: #3B5999;
+$cl-bg-lr-fc: #F2F2F2;
 
 @font-face {
   src: url("../assets/fonts/utm_bryantlg.ttf");
