--- a/scss/_login-register.scss
+++ b/scss/_login-register.scss
@@ -41,7 +41,7 @@
   .tab-content {
     margin-top: 30px;
 
-    label {
+    .form-label {
       font-weight: bold;
       font-size: 20px;
       line-height: 25px;
@@ -69,7 +69,7 @@
       background-color: $cl-bg-lr-fc;
     }
 
-    .ipt-pwd {
+    .login-pass {
       margin-bottom: 10px;
     }
 
