--- a/scss/_banner-end.scss
+++ b/scss/_banner-end.scss
@@ -1,4 +1,5 @@
 .banner-end {
+  font-family: "UTM_BryantLG";
   margin-top: 55px;
   height: 500px;
   background-image: url("../assets/images/banner2.jpg");
@@ -24,6 +25,7 @@
     background: $cl-while;
     box-shadow: 0px 4px 4px 0px $cl-boxshadow-black inset;
     border-radius: 35px;
+    border: 0.3px solid $cl-while;
     padding: 15px 65px;
   }
 }
