--- a/scss/_courses.scss
+++ b/scss/_courses.scss
@@ -1,9 +1,9 @@
 .courses {
-  margin-top: 50px;
+  font-family: "UTM_BryantLG";
 
   .card {
     background-color: $cl-while;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 10px $cl-boxshadow-black;
     border-radius: 15px;
 
     .html-css-js {
@@ -34,7 +34,7 @@
   .card-img-top {
     width: 100%;
     height: 215px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 10px $cl-boxshadow-black;
     border-radius: 15px 15px 0px 0px;
 
     img {
