--- a/scss/_feedback.scss
+++ b/scss/_feedback.scss
@@ -1,4 +1,5 @@
 .feedback {
+  font-family: "UTM_BryantLG";
   margin-top: 80px;
 
   &-title {
@@ -11,6 +12,10 @@
     &-text {
       border-bottom: 6px solid $color_hover;
     }
+  }
+
+  .carousel-item {
+    padding: 15px;
   }
 
   &-intro {
@@ -26,9 +31,11 @@
   }
 
   &-border {
+    z-index: 1;
     border: 0.5px solid $cl-border;
     box-sizing: border-box;
     border-radius: 10px;
+    box-shadow: 0px 0px 10px $cl-boxshadow-black;
 
     &-text {
       text-align: start;
@@ -71,20 +78,32 @@
     }
   }
 
-  .fa-chevron-circle-left {
-    font-size: 30px;
-    color: $cl-feedback-slide;
+  .slide-arrow {
     position: absolute;
-    top: 50px;
-    left: -15px;
+    top: 70px;
+    color: $cl-slick;
   }
 
-  .fa-chevron-circle-right {
-    font-size: 30px;
-    color: $cl-feedback-slide;
-    position: absolute;
-    top: 50px;
-    right: -15px;
+  .prev-arrow {
+    z-index: 2;
+    left: 0px;
+    width: 30px;
+    height: 30px;
+    background: $cl-while;
+    border: 0.5px solid $cl-slick;
+    box-sizing: border-box;
+    border-radius: 50%;
+  }
+
+  .next-arrow {
+    z-index: 2;
+    right: 0px;
+    width: 30px;
+    height: 30px;
+    background: $cl-while;
+    border: 0.5px solid $cl-slick;
+    box-sizing: border-box;
+    border-radius: 50%;
   }
 }
 
@@ -99,6 +118,10 @@
       &-text {
         border-bottom: 4px solid $color_hover;
       }
+    }
+
+    .slide-arrow {
+      top: 60px;
     }
 
     &-intro {
