--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -11,6 +11,7 @@
   }
 
   .nav-item {
+    margin-left: 8px;
     padding: 0 15px;
     text-transform: uppercase;
 
@@ -21,13 +22,18 @@
     }
   }
 
+  .nav-item.active,
   .nav-item:hover {
     background: $color_hover;
     border-radius: 17px;
 
     .nav-link {
-      color: white;
+      color: $cl-while;
     }
+  }
+
+  .nav-item-hidden {
+    display: none;
   }
 }
 
@@ -55,12 +61,16 @@
         margin: 0 auto;
       }
     }
+
+    .nav-item-hidden {
+      display: block;
+    }
   }
 }
 
 @media all and (max-width: 767px){
   .header-menu {
-    height: 65px;
+    height: auto;
 
     .navbar-toggler .navbar-toggler-icon {
       width: 20px;
@@ -81,6 +91,11 @@
       font-size: 16px;
       line-height: 22px;
       text-transform: uppercase;
+      margin-bottom: 46px;
+    }
+
+    .nav-home {
+      margin-top: 42px;
     }
 
     .nav-item:hover {
@@ -90,6 +105,10 @@
       .nav-link {
         color: $color_hover;
       }
+    }
+
+    .nav-item-hidden {
+      display: block;
     }
   }
 }
