--- a/scss/_why-hapolearn.scss
+++ b/scss/_why-hapolearn.scss
@@ -1,4 +1,5 @@
 .why-hapolearn {
+  font-family: "UTM_BryantLG";
   margin-top: 55px;
   height: 740px;
   background-image: url("../assets/images/bg-black.jpg");
@@ -18,6 +19,7 @@
       text-align: center;
       letter-spacing: -0.02em;
       margin-left: 30px;
+      margin-bottom: 5px;
     }
 
     .text-content {
@@ -61,8 +63,9 @@
         width: 700px;
         font-size: 50px;
         line-height: 61px;
-        margin-left: 90px;
-        margin-top: -270px;
+        margin-left: 100px;
+        margin-top: -320px;
+        margin-bottom: 55px;
       }
 
       .text-content {
@@ -108,16 +111,17 @@
     &-text {
       .why-hapolearn-title {
         text-align: left;
-        width: 300px;
+        width: 228px;
         font-size: 40px;
         line-height: 40px;
-        margin-left: 150px;
-        margin-top: -270px;
+        margin-left: 170px;
+        margin-top: -250px;
+        margin-bottom: 20px;
       }
 
       .text-content {
-        font-size: 14px;
-        line-height: 17px;
+        font-size: 16px;
+        line-height: 20px;
         margin-bottom: 6px;
         margin-top: 10px;
       }
