--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -29,6 +29,10 @@ $cl-bg-lr-fc: #F2F2F2;
 $cl-slick: #969494;
 $cl-linear-gradient-f: #FFFBFB;
 $cl-linear-gradient-e: #E7E9EE;
+$cl-chatbox-title: #7F7F7F;
+$bg-chatbox-message-text: #F1F0F0;
+$cl-login-msg: #3184F7;
+$cl-chat-width: #B3B3B3;
 
 @font-face {
   src: url("../assets/fonts/utm_bryantlg.ttf");
