Update size img 2

--- a/css/style.css
+++ b/css/style.css
@@ -485,9 +485,13 @@
 }
 
 .why-hapolearn .multi-device-img {
-  width: 720px;
+  width: 780px;
   margin-left: -50px;
   margin-top: 55px;
+}
+
+.why-hapolearn .multi-device-img img {
+  width: 100%;
 }
 
 .why-hapolearn .mb-img {
