--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -33,6 +33,7 @@ $cl-chatbox-title: #7F7F7F;
 $bg-chatbox-message-text: #F1F0F0;
 $cl-login-msg: #3184F7;
 $cl-chat-width: #B3B3B3;
+$cl-bd-lg: #DADADA;
 
 @font-face {
   src: url("../assets/fonts/utm_bryantlg.ttf");
