--- a/scss/_banner-first.scss
+++ b/scss/_banner-first.scss
@@ -58,6 +58,10 @@
       color: $cl-while;
       font-size: 30px;
     }
+
+    .btn:hover {
+      color: $color_banner1_heading;
+    }
   }
 }
 
