--- a/scss/_feedback.scss
+++ b/scss/_feedback.scss
@@ -50,17 +50,22 @@
     }
   }
 
+  .feedback-abc-border {
+  }
+
   &-info {
     margin-top: 20px;
 
     &-img {
-      width: 110px;
+      width: 70px;
+      height: 70px;
     }
 
     &-title {
-      font-weight: bold;
+      margin-top: -17px;
       font-size: 20px;
       line-height: 25px;
+      font-weight: 900;
       color: $color_banner1_heading;
     }
 
