--- a/scss/_login-register.scss
+++ b/scss/_login-register.scss
@@ -41,6 +41,8 @@
 
   .tab-content {
     margin-top: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
 
     .form-label {
       font-weight: bold;
@@ -92,7 +94,7 @@
     margin-top: 15px;
 
     .horizontal-line {
-      width: 180px;
+      width: 150px;
     }
 
     .text {
