--- a/css/style.css
+++ b/css/style.css
@@ -643,6 +643,21 @@
   box-shadow: 0px 0px 10px #00000040;
 }
 
+.feedback-border:after {
+  z-index: 1;
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  bottom: 110px;
+  left: 40px;
+  border: 0.5px solid #E2E2E2;
+  background-color: #FFFFFF;
+  transform: rotate(45deg);
+  border-top: transparent;
+  border-left: transparent;
+}
+
 .feedback-border-text {
   text-align: start;
   font-size: 16px;
@@ -937,7 +952,7 @@
 }
 
 .footer-nav-left {
-  margin-left: 50px;
+  margin-left: 60px;
 }
 
 .footer-nav-right {
@@ -1125,6 +1140,7 @@
 }
 
 .login-register .nav-item .active {
+  border: 1px solid #B2D235;
   background: #B2D235;
   color: #FFFFFF;
 }
@@ -1152,13 +1168,13 @@
   margin-bottom: 6px;
 }
 
-.login-register .tab-content .form-check-input {
+.login-register .tab-content .custom-control-input {
   margin-top: 2px;
   width: 18px;
   height: 18px;
 }
 
-.login-register .tab-content .form-check-label {
+.login-register .tab-content .custom-control-label {
   margin-left: 7px;
   font-weight: bold;
   font-size: 18px;
@@ -1184,9 +1200,18 @@
   color: #B2D235;
 }
 
+.login-register .tab-content .forgot-pwd:hover {
+  color: #11114E;
+}
+
 .login-register .tab-content .btn-register {
   margin-top: 30px;
   margin-bottom: 45px;
+}
+
+.login-register .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+  background-color: #B2D235;
+  border: none;
 }
 
 .login-register .login-with {
@@ -1209,19 +1234,23 @@
   width: 200px;
   height: 42px;
   margin: 0 auto;
-  margin-top: 45px;
   background: #B2D235;
   box-shadow: inset 0px 1.5px 2px #6F8710;
   border-radius: 22px;
-}
-
-.login-register .btn-cover .btn {
   font-weight: bold;
   font-size: 18px;
   line-height: 22px;
   letter-spacing: -0.05em;
   text-transform: uppercase;
   color: #FFFFFF;
+}
+
+.login-register .btn-login {
+  margin-top: 45px;
+}
+
+.login-register .btn-register {
+  margin-top: 30px;
 }
 
 .login-register .login-account .btn {
@@ -1247,6 +1276,10 @@
   background: #3B5999;
 }
 
+.login-register .btn:hover {
+  color: #11114E;
+}
+
 @media all and (max-width: 767px) {
   .modal-content-cus {
     width: 90%;
@@ -1254,7 +1287,7 @@
     margin-top: 20px;
   }
   .modal-content-cus .login-with .horizontal-line {
-    width: 155px;
+    width: 135px;
   }
 }
 
