--- a/scss/_feedback.scss
+++ b/scss/_feedback.scss
@@ -37,6 +37,21 @@
     border-radius: 10px;
     box-shadow: 0px 0px 10px $cl-boxshadow-black;
 
+    &:after {
+      z-index: 1;
+      content: "";
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      bottom: 110px;
+      left: 40px;
+      border: 0.5px solid $cl-border;
+      background-color: $cl-while;
+      transform: rotate(45deg);
+      border-top: transparent;
+      border-left: transparent;
+    }
+
     &-text {
       text-align: start;
       font-size: 16px;
@@ -48,9 +63,6 @@
       padding-right: 0px;
       border-left: 5px solid $cl-border-l;
     }
-  }
-
-  .feedback-abc-border {
   }
 
   &-info {
