--- a/scss/_login-register.scss
+++ b/scss/_login-register.scss
@@ -26,6 +26,7 @@
   }
 
   .nav-item .active{
+    border: 1px solid $color_card-title;
     background: $color_card-title;
     color: $cl-while;
   }
@@ -52,13 +53,13 @@
       margin-bottom: 6px;
     }
 
-    .form-check-input {
+    .custom-control-input {
       margin-top: 2px;
       width: 18px;
       height: 18px;
     }
 
-    .form-check-label {
+    .custom-control-label {
       margin-left: 7px;
       font-weight: bold;
       font-size: 18px;
@@ -84,10 +85,19 @@
       color: $color_card-title;
     }
 
+    .forgot-pwd:hover {
+      color: $color_banner1_heading;
+    }
+
     .btn-register {
       margin-top: 30px;
       margin-bottom: 45px;
     }
+  }
+
+  .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+    background-color: $color_card-title;
+    border: none;
   }
 
   .login-with {
@@ -110,19 +120,23 @@
     width: 200px;
     height: 42px;
     margin: 0 auto;
-    margin-top: 45px;
     background: $color_card-title;
     box-shadow: inset 0px 1.5px 2px $cl-box-shadow;
     border-radius: 22px;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: $cl-while;
+  }
 
-    .btn {
-      font-weight: bold;
-      font-size: 18px;
-      line-height: 22px;
-      letter-spacing: -0.05em;
-      text-transform: uppercase;
-      color: $cl-while;
-    }
+  .btn-login {
+    margin-top: 45px;
+  }
+
+  .btn-register {
+    margin-top: 30px;
   }
 
   .login-account {
@@ -149,6 +163,10 @@
       background: $cl-bg-fb;
     }
   }
+
+  .btn:hover {
+    color: $color_banner1_heading;
+  }
 }
 
 @media all and (max-width: 767px){
@@ -159,7 +177,7 @@
 
     .login-with {
       .horizontal-line {
-        width: 155px;
+        width: 135px;
       }
     }
   }
