Update all codes 1

--- a/scss/_banner-first.scss
+++ b/scss/_banner-first.scss
@@ -137,11 +137,10 @@
     display: block;
 
     &-content {
-      padding-top: 420px;
-      margin-left: 60px;
+      padding-top: 400px;
+      margin: 0 auto;
 
       &-heading {
-        margin-top: 6px;
         height: 31px;
         font-size: 25px;
         line-height: 31px;
