--- a/css/style.css
+++ b/css/style.css
@@ -15,18 +15,30 @@
 }
 
 .header-menu .navbar-brand {
-  margin-left: -70px;
   width: 340px;
+  margin-left: 8%;
 }
 
 .header-menu .navbar-brand img {
   width: 100%;
 }
 
+.header-menu .menu {
+  margin-right: 8.5%;
+}
+
+.header-menu .navbar-toggler {
+  border: none;
+}
+
+.header-menu .navbar-toggler .fas {
+  font-size: 20px;
+}
+
 .header-menu .nav-item {
-  margin-left: 8px;
-  padding: 0 15px;
   text-transform: uppercase;
+  padding: 0 12px 0 15px;
+  margin-right: 5px;
 }
 
 .header-menu .nav-item .nav-link {
@@ -52,21 +64,25 @@
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
   .header-menu {
+    height: 191px;
     display: block;
-    height: 130px;
+    padding: 0;
   }
   .header-menu .navbar-brand {
+    display: block;
     width: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin: 0 auto;
   }
   .header-menu .navbar-brand img {
+    margin-top: 30px;
     width: 100%;
   }
+  .header-menu .nav-item .nav-link {
+    white-space: nowrap;
+  }
   .header-menu .menu {
-    display: block;
+    margin-right: 0;
+    margin-top: 27px;
   }
   .header-menu .menu .navbar-nav {
     margin: 0 auto;
@@ -95,16 +111,20 @@
     font-weight: bold;
     font-size: 16px;
     line-height: 22px;
-    text-transform: uppercase;
     margin-bottom: 46px;
+  }
+  .header-menu .profile {
+    margin-bottom: 170px;
   }
   .header-menu .nav-home {
     margin-top: 42px;
   }
+  .header-menu .nav-item.active,
   .header-menu .nav-item:hover {
     background: none;
     border-radius: 0;
   }
+  .header-menu .nav-item.active .nav-link,
   .header-menu .nav-item:hover .nav-link {
     color: #B2D235;
   }
@@ -243,11 +263,10 @@
     display: block;
   }
   .banner-first-content {
-    padding-top: 420px;
-    margin-left: 60px;
+    padding-top: 400px;
+    margin: 0 auto;
   }
   .banner-first-content-heading {
-    margin-top: 6px;
     height: 31px;
     font-size: 25px;
     line-height: 31px;
@@ -327,7 +346,7 @@
 }
 
 .courses .card-img-top img {
-  width: 60%;
+  width: 50%;
 }
 
 .courses .card-body {
@@ -340,6 +359,7 @@
   font-weight: bold;
   line-height: 37px;
   letter-spacing: -0.05em;
+  margin-bottom: 10px;
 }
 
 .courses .card-body .card-text {
@@ -349,6 +369,7 @@
   text-align: center;
   letter-spacing: -0.05em;
   color: #505353;
+  margin-bottom: 15px;
 }
 
 .courses .card-body .btn {
@@ -374,7 +395,7 @@
   color: #11114E;
   border-bottom: 6px solid #B2D235;
   margin-bottom: 66px;
-  margin-top: 90px;
+  margin-top: 110px;
 }
 
 .courses .view-all {
@@ -384,7 +405,7 @@
   line-height: 49px;
   letter-spacing: -0.02em;
   text-decoration: none;
-  margin-top: 35px;
+  margin-top: 60px;
   color: #90AB26;
 }
 
@@ -415,21 +436,26 @@
     line-height: 12px;
   }
   .courses .other_courses {
-    margin-top: 50px;
+    margin-top: 58px;
     font-size: 50px;
     line-height: 61px;
+    margin-bottom: 40px;
+    border-bottom: 4px solid #B2D235;
   }
   .courses .view-all {
     font-size: 28px;
     line-height: 34px;
-    margin-top: 30px;
+    margin-top: 35px;
+  }
+  .courses .view-all .arrow-right {
+    margin-top: 8px;
   }
 }
 
 @media all and (max-width: 767px) {
   .courses {
-    padding: 0px 12%;
-    margin-top: 230px;
+    padding: 0px 60px;
+    margin-top: 217px;
   }
   .courses .card-img-top {
     height: 163px;
@@ -437,24 +463,34 @@
   .courses .card-body .card-title {
     font-size: 20px;
     line-height: 25px;
+    margin-bottom: 14px;
   }
   .courses .card-body .card-text {
     font-size: 14px;
     line-height: 20px;
   }
   .courses .card-body .btn {
+    margin-top: 20px;
+    margin-bottom: 23px;
     width: 200px;
     font-size: 18px;
-    line-height: 22px;
+    padding: 7px 0;
   }
   .courses .other_courses {
     margin-top: 50px;
     font-size: 40px;
     line-height: 49px;
+    border-bottom: 3px solid #B2D235;
+    margin-bottom: 40px;
   }
   .courses .view-all {
     font-size: 22px;
     line-height: 27px;
+    margin-top: 15px;
+  }
+  .courses .view-all .arrow-right {
+    margin-left: 5px;
+    margin-top: 7px;
   }
   .courses .card {
     margin-bottom: 30px;
@@ -463,7 +499,7 @@
 
 .why-hapolearn {
   font-family: "UTM_BryantLG";
-  margin-top: 55px;
+  margin-top: 116px;
   height: 740px;
   background-image: url("../assets/images/bg-black.jpg");
   background-repeat: no-repeat;
@@ -473,6 +509,7 @@
 
 .why-hapolearn-text {
   margin-top: 300px;
+  margin-left: 20px;
   color: #FFFFFF;
   text-align: center;
 }
@@ -531,13 +568,14 @@
     line-height: 61px;
     margin-left: 100px;
     margin-top: -320px;
-    margin-bottom: 55px;
+    margin-bottom: 65px;
   }
   .why-hapolearn-text .text-content {
     font-size: 16px;
     line-height: 20px;
     margin-bottom: 7px;
-    margin-top: 8px;
+    margin-left: -25px;
+    margin-top: 10px;
   }
   .why-hapolearn .fa-check-circle {
     font-size: 17px;
@@ -549,8 +587,7 @@
   }
   .why-hapolearn .multi-device-img img {
     width: 100%;
-    margin-left: 20px;
-    margin-top: 55px;
+    margin-top: 35px;
   }
   .why-hapolearn .mb-img {
     width: 250px;
@@ -563,15 +600,15 @@
 
 @media all and (max-width: 767px) {
   .why-hapolearn {
-    margin-top: 80px;
-    height: 550px;
+    margin-top: 90px;
+    height: 570px;
   }
   .why-hapolearn-text .why-hapolearn-title {
     text-align: left;
     width: 228px;
     font-size: 40px;
     line-height: 40px;
-    margin-left: 170px;
+    margin-left: 130px;
     margin-top: -250px;
     margin-bottom: 20px;
   }
@@ -580,11 +617,13 @@
     line-height: 20px;
     margin-bottom: 6px;
     margin-top: 10px;
+    margin-left: -60px;
   }
   .why-hapolearn .fa-check-circle {
     font-size: 16px;
     line-height: 18px;
     letter-spacing: -0.02em;
+    margin-right: 9px;
   }
   .why-hapolearn .multi-device-img {
     margin: 0 auto;
@@ -604,7 +643,7 @@
 
 .feedback {
   font-family: "UTM_BryantLG";
-  margin-top: 80px;
+  margin-top: 110px;
 }
 
 .feedback-title {
@@ -613,6 +652,7 @@
   line-height: 98px;
   letter-spacing: -0.02em;
   color: #11114E;
+  margin-bottom: 44px;
 }
 
 .feedback-title-text {
@@ -631,8 +671,10 @@
   text-align: center;
   letter-spacing: -0.02em;
   color: #505353;
-  margin-top: 30px;
-  margin-bottom: 40px;
+}
+
+.feedback .slide {
+  margin-top: 40px;
 }
 
 .feedback-border {
@@ -650,7 +692,7 @@
   width: 20px;
   height: 20px;
   bottom: 110px;
-  left: 40px;
+  left: 45px;
   border: 0.5px solid #E2E2E2;
   background-color: #FFFFFF;
   transform: rotate(45deg);
@@ -671,19 +713,20 @@
 }
 
 .feedback-info {
-  margin-top: 20px;
+  margin-top: 23px;
+  margin-left: 20px;
 }
 
 .feedback-info-img {
-  width: 70px;
-  height: 70px;
+  width: 65px;
+  height: 65px;
 }
 
 .feedback-info-title {
-  margin-top: -17px;
+  margin-top: -20px;
   font-size: 20px;
   line-height: 25px;
-  font-weight: 900;
+  font-weight: bold;
   color: #11114E;
 }
 
@@ -730,7 +773,7 @@
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
   .feedback {
-    margin-top: 60px;
+    margin-top: 57px;
   }
   .feedback-title {
     font-size: 50px;
@@ -746,16 +789,19 @@
     width: 516px;
     font-size: 18px;
     line-height: 22px;
+    margin-top: 28px;
+    margin-bottom: 15px;
   }
 }
 
 @media all and (max-width: 767px) {
   .feedback {
-    margin-top: 40px;
+    margin-top: 50px;
   }
   .feedback-title {
     font-size: 40px;
     line-height: 49px;
+    margin-bottom: 26px;
   }
   .feedback-title-text {
     border-bottom: 3px solid #B2D235;
@@ -765,6 +811,9 @@
     font-size: 16px;
     line-height: 20px;
   }
+  .feedback .slide {
+    margin-top: 8px;
+  }
   .feedback .fa-chevron-circle-left {
     font-size: 25px;
     left: -10px;
@@ -773,13 +822,33 @@
     font-size: 25px;
     right: -10px;
   }
+  .feedback-border:after {
+    width: 17px;
+    height: 17px;
+    bottom: 101px;
+    left: 38px;
+  }
+  .feedback-info-img {
+    width: 50px;
+    height: 50px;
+  }
+  .feedback-info-title {
+    margin-top: -22px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .feedback-info-subtitle {
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
 
 .banner-end {
   font-family: "UTM_BryantLG";
-  margin-top: 55px;
+  margin-top: 90px;
   height: 500px;
   background-image: url("../assets/images/banner2.jpg");
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -813,7 +882,7 @@
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
   .banner-end {
-    margin-top: 50px;
+    margin-top: 60px;
     height: 267px;
   }
   .banner-end-text {
@@ -831,7 +900,7 @@
 
 @media all and (max-width: 767px) {
   .banner-end {
-    margin-top: 45px;
+    margin-top: 0;
     height: 182px;
   }
   .banner-end-text {
@@ -849,7 +918,7 @@
 
 .statistic {
   font-family: "UTM_BryantLG";
-  margin-top: 50px;
+  margin-top: 110px;
 }
 
 .statistic-title {
@@ -858,12 +927,12 @@
   line-height: 98px;
   letter-spacing: -0.02em;
   color: #11114E;
+  margin-bottom: 55px;
 }
 
 .statistic-title-underline {
   border-radius: 3px;
   border-bottom: 6px solid #B2D235;
-  margin-bottom: 20px;
 }
 
 .statistic-content-title {
@@ -872,11 +941,10 @@
   line-height: 74px;
   letter-spacing: -0.05em;
   color: #505353;
-  margin-bottom: 10px;
+  margin-bottom: 26px;
 }
 
 .statistic-content-number {
-  margin-bottom: 20px;
   font-weight: bold;
   font-size: 60px;
   line-height: 74px;
@@ -885,16 +953,21 @@
 }
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
+  .statistic {
+    margin-top: 60px;
+  }
   .statistic-title {
     font-size: 50px;
     line-height: 61px;
+    margin-bottom: 39px;
   }
   .statistic-title-underline {
-    border-bottom: 5px solid #B2D235;
+    border-bottom: 4px solid #B2D235;
   }
   .statistic-content-title {
     font-size: 40px;
     line-height: 49px;
+    margin-bottom: 20px;
   }
   .statistic-content-number {
     font-size: 40px;
@@ -903,36 +976,43 @@
 }
 
 @media all and (max-width: 767px) {
+  .statistic {
+    margin-top: 50px;
+  }
   .statistic-title {
     font-size: 40px;
     line-height: 49px;
+    margin-bottom: 37px;
   }
   .statistic-title-underline {
-    border-bottom: 4px solid #B2D235;
+    border-bottom: 3px solid #B2D235;
   }
   .statistic-content-title {
     font-size: 40px;
     line-height: 49px;
+    margin-bottom: 12px;
   }
   .statistic-content-number {
     font-size: 40px;
     line-height: 49px;
+    margin-bottom: 35px;
   }
 }
 
 .footer {
   font-family: "UTM_BryantLG";
-  margin-top: 50px;
+  margin-top: 120px;
   color: #FFFFFF;
   background: #505353;
 }
 
 .footer-on {
-  padding: 35px 15px;
+  padding: 65px 0;
 }
 
 .footer-logo {
-  margin-top: -106px;
+  margin-top: -150px;
+  margin-left: 25px;
 }
 
 .footer-logo .footer-logo-img {
@@ -952,11 +1032,11 @@
 }
 
 .footer-nav-left {
-  margin-left: 60px;
+  margin-left: 40px;
 }
 
 .footer-nav-right {
-  margin-left: 80px;
+  margin-left: 90px;
 }
 
 .footer-nav .nav-link {
@@ -972,6 +1052,14 @@
   color: #F2C54F;
 }
 
+.footer-contact {
+  margin-left: -60px;
+}
+
+.footer .a-link {
+  text-decoration: none;
+}
+
 .footer .txt-hidden-fb,
 .footer .txt-hidden-phone,
 .footer .txt-hidden-mail {
@@ -979,28 +1067,25 @@
   display: none;
   margin-left: 17px;
   margin-right: 17px;
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: -0.05em;
   text-decoration-line: underline;
 }
 
-.footer .footer-icon-fb img {
-  width: 50px;
+.footer .footer-icon-fb {
+  margin-right: 35px;
 }
 
 .footer .footer-icon-phone {
   margin-right: 35px;
-  margin-left: 35px;
 }
 
-.footer .footer-icon-phone img {
-  width: 50px;
-}
-
-.footer .footer-icon-mail img {
-  width: 50px;
+.footer .footer-icon-fb:hover {
+  margin-right: 0;
 }
 
 .footer .footer-icon-fb:hover .txt-hidden-fb {
-  margin-right: 0;
   display: inline-block;
 }
 
@@ -1017,18 +1102,22 @@
 }
 
 .footer .copyright {
-  margin-left: 0;
-  padding: 0;
-  width: 100%;
-  height: 35px;
+  height: 38px;
   font-size: 15px;
   line-height: 18px;
   background: #454545;
 }
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
+  .footer {
+    margin-top: 60px;
+  }
   .footer-on {
-    padding: 20px 10px;
+    padding: 32px 0;
+  }
+  .footer-logo {
+    margin-top: -170px;
+    margin-left: -35px;
   }
   .footer-logo .footer-logo-img {
     width: 170px;
@@ -1041,10 +1130,10 @@
     letter-spacing: -0.05em;
   }
   .footer-nav-left {
-    margin-left: 40px;
+    margin-left: 0;
   }
   .footer-nav-right {
-    margin-left: 53px;
+    margin-left: 55px;
   }
   .footer-nav .nav-link {
     font-size: 18px;
@@ -1052,32 +1141,65 @@
     margin-bottom: 26px;
   }
   .footer-contact {
-    width: 40px;
-    height: 40px;
+    margin-left: 30px;
   }
-  .footer-contact-icon {
-    font-size: 20px;
+  .footer .footer-icon-fb:hover {
+    margin-right: 30px;
+  }
+  .footer .footer-icon-fb:hover .txt-hidden-fb {
+    display: none;
+  }
+  .footer .footer-icon-phone:hover {
+    margin-right: 30px;
+  }
+  .footer .footer-icon-phone:hover .txt-hidden-phone {
+    display: none;
+  }
+  .footer .footer-icon-mail:hover .txt-hidden-mail {
+    display: none;
+  }
+  .footer .footer-icon-fb {
+    width: 40px;
+    margin-right: 30px;
+  }
+  .footer .footer-icon-fb img {
+    width: 100%;
+  }
+  .footer .footer-icon-phone {
+    width: 40px;
+    margin-right: 30px;
+  }
+  .footer .footer-icon-phone img {
+    width: 100%;
+  }
+  .footer .footer-icon-mail {
+    width: 40px;
+  }
+  .footer .footer-icon-mail img {
+    width: 100%;
   }
 }
 
 @media all and (max-width: 767px) {
   .footer {
+    margin-top: 50px;
     display: flex;
     flex-wrap: wrap;
   }
   .footer-on {
-    padding: 15px 30px;
+    padding: 25px 25px;
   }
   .footer-logo {
-    margin-top: 0px;
-    margin-left: -30px;
+    margin-top: 20px;
+    margin-left: 20px;
     order: 2;
   }
   .footer-logo .footer-logo-img {
     width: 150px;
   }
   .footer-logo .footer-logo-text {
-    margin-left: 27px;
+    margin-top: 8px;
+    margin-left: 32px;
     width: 175px;
     font-size: 14px;
     line-height: 17px;
@@ -1086,7 +1208,7 @@
     order: 1;
   }
   .footer-nav-left {
-    margin-left: 20px;
+    margin-left: 0;
   }
   .footer-nav-right {
     margin-left: 125px;
@@ -1096,17 +1218,48 @@
     line-height: 21px;
     margin-bottom: 27px;
   }
-  .footer .contact {
-    order: 3;
+  .footer .footer-icon-fb:hover {
+    margin-right: 11px;
+  }
+  .footer .footer-icon-fb:hover .txt-hidden-fb {
+    display: none;
+  }
+  .footer .footer-icon-phone:hover {
+    margin-right: 11px;
+  }
+  .footer .footer-icon-phone:hover .txt-hidden-phone {
+    display: none;
+  }
+  .footer .footer-icon-mail:hover .txt-hidden-mail {
+    display: none;
+  }
+  .footer .footer-icon-fb {
+    width: 30px;
+    margin-right: 11px;
+  }
+  .footer .footer-icon-fb img {
+    width: 100%;
+  }
+  .footer .footer-icon-phone {
+    width: 30px;
+    margin-right: 11px;
+  }
+  .footer .footer-icon-phone img {
+    width: 100%;
+  }
+  .footer .footer-icon-mail {
+    width: 30px;
+  }
+  .footer .footer-icon-mail img {
+    width: 100%;
   }
   .footer-contact {
-    width: 30px;
-    height: 30px;
-  }
-  .footer-contact-icon {
-    font-size: 15px;
+    order: 3;
+    margin-left: 100px;
+    margin-top: -30px;
   }
   .footer .copyright {
+    width: 100%;
     order: 4;
   }
 }
@@ -1399,4 +1552,18 @@
   width: 80px;
   height: 80px;
   cursor: pointer;
+}
+
+@media all and (min-width: 768px) and (max-width: 1024px) {
+  .messenger .logo-messenger {
+    width: 70px;
+    height: 70px;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .messenger .logo-messenger {
+    width: 60px;
+    height: 60px;
+  }
 }
