--- a/scss/_chatbox.scss
+++ b/scss/_chatbox.scss
@@ -107,3 +107,21 @@
     cursor: pointer;
   }
 }
+
+@media all and (min-width: 768px) and (max-width: 1024px){
+  .messenger {
+    .logo-messenger {
+      width: 70px;
+      height: 70px;
+    }
+  }
+}
+
+@media all and (max-width: 767px){
+  .messenger {
+    .logo-messenger {
+      width: 60px;
+      height: 60px;
+    }
+  }
+}
