--- a/scss/_courses.scss
+++ b/scss/_courses.scss
@@ -38,7 +38,7 @@
     border-radius: 15px 15px 0px 0px;
 
     img {
-      width: 60%;
+      width: 50%;
     }
   }
 
@@ -51,6 +51,7 @@
       font-weight: bold;
       line-height: 37px;
       letter-spacing: -0.05em;
+      margin-bottom: 10px;
     }
 
     .card-text {
@@ -60,6 +61,7 @@
       text-align: center;
       letter-spacing: -0.05em;
       color: $color_banner1_desc;
+      margin-bottom: 15px;
     }
 
     .btn {
@@ -86,7 +88,7 @@
     color: $color_other_courses;
     border-bottom: 6px solid $color_hover;
     margin-bottom: 66px;
-    margin-top: 90px;
+    margin-top: 110px;
   }
 
   .view-all {
@@ -96,7 +98,7 @@
     line-height: 49px;
     letter-spacing: -0.02em;
     text-decoration: none;
-    margin-top: 35px;
+    margin-top: 60px;
     color: $color-view-all;
 
     .arrow-right {
@@ -135,23 +137,29 @@
     }
 
     .other_courses {
-      margin-top: 50px;
+      margin-top: 58px;
       font-size: 50px;
       line-height: 61px;
+      margin-bottom: 40px;
+      border-bottom: 4px solid $color_hover;
     }
 
     .view-all {
       font-size: 28px;
       line-height: 34px;
-      margin-top: 30px;
+      margin-top: 35px;
+
+      .arrow-right {
+        margin-top: 8px;
+      }
     }
   }
 }
 
 @media all and (max-width: 767px) {
   .courses {
-    padding: 0px 12%;
-    margin-top: 230px;
+    padding: 0px 60px;
+    margin-top: 217px;
 
     .card-img-top {
       height: 163px;
@@ -161,6 +169,7 @@
       .card-title {
         font-size: 20px;
         line-height: 25px;
+        margin-bottom: 14px;
       }
 
       .card-text{
@@ -169,9 +178,11 @@
       }
 
       .btn {
+        margin-top: 20px;
+        margin-bottom: 23px;
         width: 200px;
         font-size: 18px;
-        line-height: 22px;
+        padding: 7px 0;
       }
     }
 
@@ -179,11 +190,19 @@
       margin-top: 50px;
       font-size: 40px;
       line-height: 49px;
+      border-bottom: 3px solid $color_hover;
+      margin-bottom: 40px;
     }
 
     .view-all {
       font-size: 22px;
       line-height: 27px;
+      margin-top: 15px;
+
+      .arrow-right {
+        margin-left: 5px;
+        margin-top: 7px;
+      }
     }
 
     .card {
