--- a/scss/_feedback.scss
+++ b/scss/_feedback.scss
@@ -1,6 +1,6 @@
 .feedback {
   font-family: "UTM_BryantLG";
-  margin-top: 80px;
+  margin-top: 110px;
 
   &-title {
     font-weight: bold;
@@ -8,6 +8,7 @@
     line-height: 98px;
     letter-spacing: -0.02em;
     color: $color_other_courses;
+    margin-bottom: 44px;
 
     &-text {
       border-bottom: 6px solid $color_hover;
@@ -26,8 +27,10 @@
     text-align: center;
     letter-spacing: -0.02em;
     color: $color_banner1_desc;
-    margin-top: 30px;
-    margin-bottom: 40px;
+  }
+
+  .slide {
+    margin-top: 40px;
   }
 
   &-border {
@@ -44,7 +47,7 @@
       width: 20px;
       height: 20px;
       bottom: 110px;
-      left: 40px;
+      left: 45px;
       border: 0.5px solid $cl-border;
       background-color: $cl-while;
       transform: rotate(45deg);
@@ -66,18 +69,19 @@
   }
 
   &-info {
-    margin-top: 20px;
+    margin-top: 23px;
+    margin-left: 20px;
 
     &-img {
-      width: 70px;
-      height: 70px;
+      width: 65px;
+      height: 65px;
     }
 
     &-title {
-      margin-top: -17px;
+      margin-top: -20px;
       font-size: 20px;
       line-height: 25px;
-      font-weight: 900;
+      font-weight: bold;
       color: $color_banner1_heading;
     }
 
@@ -126,7 +130,7 @@
 
 @media all and (min-width: 768px) and (max-width: 1024px){
   .feedback {
-    margin-top: 60px;
+    margin-top: 57px;
 
     &-title {
       font-size: 50px;
@@ -145,17 +149,20 @@
       width: 516px;
       font-size: 18px;
       line-height: 22px;
+      margin-top: 28px;
+      margin-bottom: 15px;
     }
   }
 }
 
 @media all and (max-width: 767px){
   .feedback {
-    margin-top: 40px;
+    margin-top: 50px;
 
     &-title {
       font-size: 40px;
       line-height: 49px;
+      margin-bottom: 26px;
 
       &-text {
         border-bottom: 3px solid $color_hover;
@@ -168,6 +175,10 @@
       line-height: 20px;
     }
 
+    .slide {
+      margin-top: 8px;
+    }
+
     .fa-chevron-circle-left {
       font-size: 25px;
       left: -10px;
@@ -176,6 +187,31 @@
     .fa-chevron-circle-right {
       font-size: 25px;
       right: -10px;
+    }
+
+    &-border:after {
+      width: 17px;
+      height: 17px;
+      bottom: 101px;
+      left: 38px;
+    }
+
+    &-info {
+      &-img {
+        width: 50px;
+        height: 50px;
+      }
+
+      &-title {
+        margin-top: -22px;
+        font-size: 16px;
+        line-height: 20px
+      }
+
+      &-subtitle {
+        font-size: 14px;
+        line-height: 17px;
+      }
     }
   }
 }
