--- a/scss/_feedback.scss
+++ b/scss/_feedback.scss
@@ -179,6 +179,10 @@
       margin-top: 8px;
     }
 
+    .slide-arrow {
+      top: 82px;
+    }
+
     .fa-chevron-circle-left {
       font-size: 25px;
       left: -10px;
