--- a/scss/_why-hapolearn.scss
+++ b/scss/_why-hapolearn.scss
@@ -125,11 +125,11 @@
       }
 
       .text-content {
+        text-align: center;
         font-size: 16px;
         line-height: 20px;
         margin-bottom: 6px;
         margin-top: 10px;
-        margin-left: -60px;
       }
     }
 
