Up file to github pages

--- a/css/style.css
+++ b/css/style.css
@@ -619,6 +619,7 @@
     line-height: 20px;
     margin-bottom: 6px;
     margin-top: 10px;
+    margin-left: -25px;
   }
   .why-hapolearn .fa-check-circle {
     font-size: 16px;
