--- a/scss/_why-hapolearn.scss
+++ b/scss/_why-hapolearn.scss
@@ -130,6 +130,7 @@
         line-height: 20px;
         margin-bottom: 6px;
         margin-top: 10px;
+        margin-left: -25px;
       }
     }
 
